Fixed wrap

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -100,6 +100,7 @@ ng-include, #days, #main {
   white-space: normal;
   min-height: 50px;
   flex:1;
+  width: 100%;
 }
 
 #activityItem {
@@ -132,6 +133,18 @@ ng-include, #days, #main {
   font-weight: 600;
   display: table-cell;
   width: 100%;
+  word-wrap: break-all;
+  /* Warning: Needed for oldIE support, but words are broken up letter-by-letter */
+   -ms-word-break: break-all;
+   word-break: break-all;
+
+   /* Non standard for webkit */
+   word-break: break-word;
+
+   -webkit-hyphens: auto;
+   -moz-hyphens: auto;
+   -ms-hyphens: auto;
+   hyphens: auto;
 }
 
 /*Activity footer*/
@@ -196,7 +209,6 @@ td{
   width: 12px;
   height: 12px;
 }
-
 
 /** Distribution diagram */
 #distribution-divider::after {
